Initial look, functionality still pending

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,6 @@
-h1 Home#index
+h1 
+  span.fa-stack.fa-lg
+    i.fa.fa-circle.fa-stack-2x
+    i.fa.fa-search.fa-inverse.fa-stack-1x
+  | Búsqueda de Artistas
 p Find me in app/views/home/index.html.slim
