--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,7 +20,7 @@ html
                         i.fa.fa-circle.fa-stack-2x
                         i.fa.fa-user.fa-inverse.fa-stack-1x
                       /TODO
-                      | Ariel
+                      | Usuario
                       span.caret
                     ul.dropdown-menu
                       li
